packages/typ/tests/fixtures/diagnostics/0280_fun_higher_order_callback_mismatch_04.ml.expected
File "0280_fun_higher_order_callback_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0280_fun_higher_order_callback_mismatch_04 is not a valid module name.

File "0280_fun_higher_order_callback_mismatch_04.ml", line 2, characters 33-34:
2 | let _ = apply_delta (fun b -> if b then 3 else 4)
                                     ^
Error: The value b has type int but an expression was expected of type 
       bool because it is in the condition of an if-statement
